kubernetes/apps/default/prowlarr/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
  enableDefaultDeny:
    egress: false
  egressDeny:
    - toCIDR:
        - "2000::/3"
